--- a/src/index.html
+++ b/src/index.html
@@ -1,81 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./public/favicon.ico">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./public/favicon.ico" />
     <title>Creative Web</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <h1>Creative Web</h1>
+      <h1>Creative Web</h1>
 
-        <div>
-            <button id="btn-access">Allow sensors</button>
-            <p id="debug"></p>
-        </div>
-
-        <canvas id="canvas-scene-1" class="scene"></canvas>
-        <canvas id="canvas-scene-2" class="scene"></canvas>
-        <canvas id="canvas-scene-3" class="scene"></canvas>
+      <div>
+        <button id="btn-access">Allow sensors</button>
+        <p id="debug"></p>
+      </div>
+      <canvas id="canvas-scene-1" class="scene"></canvas>
+      <canvas id="canvas-scene-2" class="scene"></canvas>
+      <canvas id="canvas-scene-3" class="scene"></canvas>
     </div>
     <script type="module" src="./main.js"></script>
-</body>
+  </body>
 
-<style>
+  <style>
     body {
-        background-color: black;
-        height: 300vh;
+      background-color: black;
+      height: 300vh;
     }
 
     button {
-        border: solid white 1px;
-        background-color: transparent;
-        text-transform: uppercase;
-        color: white;
-        padding-inline: 2em;
-        padding-block: 1em;
-        border-radius: 2em;
+      border: solid white 1px;
+      background-color: transparent;
+      text-transform: uppercase;
+      color: white;
+      padding-inline: 2em;
+      padding-block: 1em;
+      border-radius: 2em;
     }
 
     button:active {
-        background-color: white;
-        color: black;
+      background-color: white;
+      color: black;
     }
 
     p {
-        font-family: Arial, Helvetica, sans-serif;
-        color: white;
-        text-align: center;
+      font-family: Arial, Helvetica, sans-serif;
+      color: white;
+      text-align: center;
     }
 
     h1 {
-        font-family: Arial, Helvetica, sans-serif;
-        text-align: center;
-        text-transform: uppercase;
-        font-style: italic;
-        color: white;
-        font-size: 1.5rem;
-        margin-block: 1rem 0;
+      font-family: Arial, Helvetica, sans-serif;
+      text-align: center;
+      text-transform: uppercase;
+      font-style: italic;
+      color: white;
+      font-size: 1.5rem;
+      margin-block: 1rem 0;
     }
 
     .container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 1rem;
-        margin-block: 1rem;
-        width: min(100% - 1rem, 50rem);
-        margin-inline: auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+      margin-block: 1rem;
+      width: min(100% - 1rem, 50rem);
+      margin-inline: auto;
     }
 
     .scene {
-        border: solid white;
-        width: 100%;
-        height: 50vh;
+      border: solid white;
+      width: 100%;
+      height: 50vh;
     }
-</style>
-
+  </style>
 </html>
